# advent-of-code

./: pyproject.toml
.openapi-generator/: FILES
2022/: README.md  setup.py
2022/day_1/: part_1_2.py
2022/day_10/: part_2.py
2022/day_11/: part_1.py
2022/day_13/: part_2.py
2022/day_3/: part_1.py  part_2.py
2022/day_5/: part_1.py
2022/day_7/: part_1.py
2022/day_9/: part_1.py
2022/docs/apis/tags/: PetApi.md  StoreApi.md  (+1 more)
2022/docs/models/: ApiResponse.md  Category.md  Order.md  Pet.md  Tag.md  User.md
2022/openapi_client/: __init__.py  api_client.py  configuration.py  rest.py  schemas.py
2022/openapi_client/apis/: path_to_api.py
2022/openapi_client/model/: api_response.py  category.py  category.pyi  order.py  order.pyi  pet.py  pet.pyi  tag.py  user.pyi
2022/openapi_client/models/: __init__.py
2022/openapi_client/paths/: __init__.py
2022/test/test_models/: test_api_response.py  test_category.py  test_order.py  test_pet.py  test_tag.py  test_user.py
2023/: README.md
2023/day-03/: Cargo.toml
2023/day-12/: Cargo.toml
2023/day-14/: Cargo.toml  results_list.txt
2023/day-16/: Cargo.toml
2023/day-18/: out.txt
2023/day-19/: Cargo.toml
2023/day-20/: Cargo.toml
2023/day-23/: Cargo.toml
2023/day_1/src/: main.rs
day_10/: part_1.py
day_11/: part_2.py
day_12/: part_1.py  part_2.py
day_13/: part_1.py
day_2/: part1.py  part2.py
day_3/: part_2.py
day_4/: part_1.py  part_1_2.py
day_5/: part_1.py  part_2.py
day_6/: part_1_2.py
day_7/: part_1.py  part_2.py
day_8/: part_1.py  part_2.py
day_9/: part_1.py  part_2.py
(+46 files in other folders)
