[tool.poetry]
name = "advent-of-code-2022"
version = "0.1.0"
description = ""
authors = ["Jordi Dekker"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.8"
ruamel-yaml = "^0.17.21"
pyyaml = "^6.0"
tqdm = "^4.64.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.17.1"
black = {version = "^22.10.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
